# Distributed-RPC-communication-framework

./: README.md
RpcProject/: CMakeLists.txt  autobuild.sh
RpcProject/example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  user.proto
RpcProject/example/Callee/: CMakeLists.txt  friends.cc  userservice.cc
RpcProject/example/Caller/: CMakeLists.txt  callfriends.cpp  calluserservice.cpp
RpcProject/lib/include/: logqueue.h  mprpcapplication.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
RpcProject/src/: CMakeLists.txt  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  mprpcprovider.cpp  rpcheader.proto  zookeeperutil.cpp
RpcProject/src/include/: logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h
RpcProject/test/protobuf/: a.out  main.cpp  test.pb.cc  test.pb.h  test.proto
